# fastapi-todo

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
api/: base_router.py  user_routes.py
backend/: main.py
backend/alembic/versions/: a32a8a464b9f_initialization.py
backend/api/: base_router.py  todo_routes.py  user_routes.py
backend/database/: connection.py
backend/models/: todo.py
backend/services/: error_handling.py
database/: connection.py  queries.py  transactions.py
models/: user.py
services/: auth_service.py  auth_utils.py
streamlit/: User.py  main.py
