[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Muzammil <muzamilbhundi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
uvicorn = "^0.28.0"
alembic = "^1.13.1"
bcrypt = "^4.1.2"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
